[workspace]
resolver = "2"
members = ["bin/ch1-calculator", "lib/local-logging"]

[workspace.dependencies]
anyhow = "1.0.97"
ractor = { version = "0.15.2", features = ["async-trait"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"

local-logging = { path = "lib/local-logging" }
